# deprecated_dev_admin

./: .gitignore  Cargo.toml  Makefile  index.html  index.scss
src/: email_field.rs  main.rs  sign_in_button.rs
src/components/: container.rs  mod.rs
src/pages/: mod.rs  sign_in_page.rs
