[package]
name = "dev_admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
material-yew = {version="0.2.0", features=["button", "textfield"]}
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
yew = "0.19.3"
yew-router = "0.16.0"


